<resources>
    <string name="app_name">Bruce Waynes Utility Belt</string>
    <string name="action_settings">Settings</string>
    <string name="buttonText_tipCalc">Tip Calculator</string>
    <string name="layout_title_tipCalc">Handy Tip Calculator</string>
    <string name="tipCalc_instuctions">Enter the service total here&#8230;</string>
    <string name="tipCalc_totalHint">meal total</string>
    <string name="radButton0">0&#x0025;</string>
    <string name="radButton15">15&#x0025;</string>
    <string name="radButton20">20&#x0025;</string>
    <string name="radButton50">50&#x0025;</string>
    <string name="tipCalc_tipChoice">Choose your tip percentage&#8230;</string>
    <string name="tipCalc_totalTitle">Your total is&#8230;</string>
    <string name="tipCalc_total">$0.00</string>
    <string name="tipCalc_tip">$0.00</string>
    <string name="tipCalc_tipTitle">Your tip is&#8230;</string>
    <string name="tipCalc_notZero">0</string>
    <string name="tipCalc_notEmpty">Must enter an amount</string>
    <string name="weather_title">Your local weather&#8230;</string>
    <string name="button_WeatherAct">Weather</string>
    <string name="weather_degreeF">&#x2103;F</string>
    <string name="weather_RightNowText">Right now it is:</string>
    <string name="weather_TodayText">Today</string>
    <string name="weather_TomorrowText">Tomorrow</string>
    <string name="weather_LOHI">Lo/Hi</string>
    <string name="unitConverter_Titletext">Unit Converter</string>
    <string name="radButtonMass">MASS</string>
    <string name="radButtonLength">LENGTH</string>
    <string name="radButtonVolume">VOLUME</string>
    <string name="radButtonTemp">TEMPERATURE</string>
    <string name="unitConvertDefault">0.00</string>
    <string-array name="metric_length">
        <item>cm</item>
        <item>m</item>
        <item>Km</item>
    </string-array>
    <string-array name="imp_length">
        <item>in</item>
        <item>ft</item>
        <item>miles</item>
    </string-array>
    <string-array name="imp_mass">
        <item>oz (mass)</item>
        <item>lb</item>
        <item>tons</item>
    </string-array>
    <string-array name="metric_mass">
        <item>mg</item>
        <item>g</item>
        <item>Kg</item>
    </string-array>
    <string-array name="imp_volume">
        <item>oz (liquid)</item>
        <item>teaspoon</item>
        <item>tablespoon</item>
        <item>cups</item>
        <item>pints</item>
        <item>quarts</item>
        <item>gallons</item>
    </string-array>
    <string-array name="metric_volume">
        <item>mL</item>
        <item>L</item>
    </string-array>

</resources>
